--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="utf-8" http-equiv="refresh">
     <meta name="author" content="sumbioun.com">
     <link rel="icon" href="favicon.png" type="image/x-icon"/>
-    <title>Gogoame | Chuva de texto</title>
+    <title>柠汐生日快乐！ | Gogoame | Chuva de texto</title>
     <link rel="stylesheet" type="text/css" href="public/front/css/main.css">
     <link href='https://fonts.font.im/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.4.2/css/all.min.css">
